# loophost

./: .gitignore  CNAME  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  config.sh  exit_survey.html  go.work  go.work.sum  index.html  pyproject.toml  requirements.txt  tasks.py  tech  tech.html  update.html  upgrade  upgrade.html  win_hub.spec  x3d
.github/workflows/: loophost-build.yml  python-app.yml  python-publish.yml  wheelz.yml
admin/: index.html
client/: README.md  build.py  flingroute.py  hub.ini  hubconfig.ini  loophost.json  pbuild.py  pyproject.toml  requirements.txt  win_hub.spec
client/fling_hub/: __init__.py  flingroute.py  hub.plist  hub.plist.template  hubconfig.ini  launchd_plist.py  loophost.plist.template  postinstall.py  ssh.plist.template
client/fling_hub/plist/: loophost.plist.template
client/fling_hub/templates/: admin.html  local.html
client/fling_hub/templates/partials/: apptable.html  upgrade.html
client/loophost/: README.md  __init__.py  flingroute.py  installer.py  keys.py  launchd_plist.py  main.go  postinstall.py  postinstall_two.py  step_two.py  tunnel.py  uninstall.py  utils_mac.py  win_hub.py  win_hub.spec  win_lp.py
client/loophost/plist/: hub.plist.template  loophost.plist.template  ssh.plist.template  tunnel.plist.template
client/loophost/reverseproxy/: target.go
client/loophost/static/: logo-hc.txt
client/loophost/templates/: admin.html  base.html  local.html
client/loophost/templates/partials/: apptable.html  upgrade.html
client/loophost/templates/start/: base.html
client/loophost/win/: build.txt
client/templates/: local.html
demo/: app.py
loopproxy/: go.mod  go.sum  main.go
loopproxy/reverseproxy/: listener.go  reverseproxy.go
site/: app.py  freeze.py
site/static/: install.sh
site/templates/: base.html  exit_survey.html  index.html  tech.html  update.html  upgrade.html
site/templates/partials/: pricingtable.html
site/templates/start/: index.html
static/: install.sh  pushkey.pub
static/start/: styles.css
tunnels/: config.sh
