[build-system]
requires = ["poetry-core", "poetry>=0.12", "setuptools", "wheel", "setuptools-cpp", "setuptools-golang"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "loophost"
version = "0.2.7"
description = "Loophost: for a better local dev"
authors = [
    "Joshua McKenty <jmckenty@gmail.com>",
]
readme = "README.md"
license = "Apache-2.0"
include = [{ path = "VERSION" }, 
            { path = "README.md" }, 
            { path = "setup.py" }, 
            { path = "build.py" }, 
            { path = "loophost/templates" }, 
            { path = "loophost/static" }, 
            { path = "loophost/loopproxy"}, 
            { path = "loophost/plist/*.plist.template"}] 
packages = [
    { include = "loophost", format = ["wheel"] },
]
build = "build.py"

[tool.poetry.urls]
homepage = "https://loophost.dev"
documentation = "https://readthedocs.org/loophost"
repository = "https://github.com/delving-co/loophost.git"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
setuptools = "*"

[tool.poetry.dependencies]
python = "^3.9"
fling-start = "^0.1.14"
fling-cli = "^0.1.5"
certbot = "^2.6.0"
flask = "^2.3.2"
lastversion = "^2.4.15"
paramiko = "^3.1.0"
